onik koster por done

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <div class="extConM">
                 <div class="cImgA">
                     <div class="cImgOne">
-                        <div class="one"></div>
+                        <div class="one">
+                        </div>
                         <!-- <img src="Flower Asset/pngwing 6.png" alt="h"> -->
                     </div>
                         <p class="cImgC">Pink Flower Tree</p>
