--- a/index.html
+++ b/index.html
@@ -54,20 +54,31 @@
             </div>
             <div class="extConF">
                 <div class="efImg">
+                    <!-- <div class="ones"></div> -->
                     <img src="Flower Asset/Group 57.png" alt="">
                     <p class="efC">Same Day Delivery. Click & Collect.</p>
                 </div>
                 <div class="efImg">
+                    <!-- <div class="twos"></div> -->
+
                     <img src="Flower Asset/Group 58.png" alt="">
                     <p class="efC">Pink Flower Tree</p>
                 </div>
                 <div class="efImg">
+                    <!-- <div class="threes"></div> -->
+
                     <img src="Flower Asset/Group 59.png" alt="">
                     <p class="efC">Pink Flower Tree</p>
                 </div>
             </div>
         </div>
         <!-- main exta saction end -->
+        <div class="saleCont">
+            <div class="saleright"><h1 class="cHading">Hot Deal ! Sale Up To 25% <span class="diff">Off</span></h1>
+            <p class="cpara">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <button class="Allbutton">Sign Up</button></div>
+            <div class="saleleft"></div>
+        </div>
     </main>
     <footer>
 
