--- a/index.html
+++ b/index.html
@@ -73,15 +73,51 @@
             </div>
         </div>
         <!-- main exta saction end -->
-        <div class="saleCont">
-            <div class="saleright"><h1 class="cHading">Hot Deal ! Sale Up To 25% <span class="diff">Off</span></h1>
-            <p class="cpara">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-            <button class="Allbutton">Sign Up</button></div>
-            <div class="saleleft"></div>
-        </div>
-    </main>
-    <footer>
+        <div class="allsale">
+            <div class="saleCont">
+                <div class="saleright">
+                    <h1 class="cHading">Hot Deal ! Sale Up To 25% <span class="diff">Off</span></h1>
+                    <p class="cpara">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <button class="Allbutton">Sign Up</button>
+                </div>
+                <div class="saleleft">
+                    <img src="Flower Asset/pngwing 8.png" alt="">
+                </div>
+            </div>
+         </div>
+         <div class="fullInstagram">
+            <div class="insTop">
+                <h2 class="cHading">Instagram</h2>
+                <p class="cpara">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            </div>
+            <div class="insBottom">
+                <div class="insImg"><img src="Flower Asset/Flower 01.png" alt=""></div>
+                <div class="insImg"><img src="Flower Asset/Rectangle 4.png" alt=""></div>
+                <div class="insImg"><img src="Flower Asset/Rectangle 5.png" alt=""></div>
+                <div class="insImg"><img src="Flower Asset/Rectangle 6.png" alt=""></div>
+            </div>
 
+         </div>
+         <!-- instagram sasction done -->
+         <div class="fulLatestDeal">
+            <div class="dealTop">
+                <h1 class="cHading">Get The Latest Deals</h1>
+                <p class="cpara">$30 coupon for first shopping</p>
+            </div>
+            <div class="dealButoom">
+                <input type="email" class="dInput" placeholder="Enter you email here....">
+                <button class="Allbutton">Subscribe</button>
+            </div>
+         </div>
+         <!-- deal saction done -->
+    </main>
+    
+    <footer>
+        <div class="footer">
+            <h1 class="fohad">Flower<span class="fshop">Shop</span></h1>
+            <p class="fop">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <h6 class="foclose">@2020-2023, FlowerShop.com. All rights reserved. </h6>
+        </div>
     </footer>
     
 </body>
