--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                     </div>
             </div>
             <div class="extConF">
+                <div class="lastry">
                 <div class="efImg">
                     <!-- <div class="ones"></div> -->
                     <img src="Flower Asset/Group 57.png" alt="">
@@ -62,14 +63,15 @@
                     <!-- <div class="twos"></div> -->
 
                     <img src="Flower Asset/Group 58.png" alt="">
-                    <p class="efC">Pink Flower Tree</p>
+                    <p class="efC">Fresh Flowers. Local Growers.</p>
                 </div>
                 <div class="efImg">
                     <!-- <div class="threes"></div> -->
 
                     <img src="Flower Asset/Group 59.png" alt="">
-                    <p class="efC">Pink Flower Tree</p>
+                    <p class="efC">24/7 Free Support.</p>
                 </div>
+            </div>
             </div>
         </div>
         <!-- main exta saction end -->
@@ -78,7 +80,7 @@
                 <div class="saleright">
                     <h1 class="cHading">Hot Deal ! Sale Up To 25% <span class="diff">Off</span></h1>
                     <p class="cpara">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
-                    <button class="Allbutton">Sign Up</button>
+                    <button class="Allbutton forM">Sign Up</button>
                 </div>
                 <div class="saleleft">
                     <img src="Flower Asset/pngwing 8.png" alt="">
@@ -101,7 +103,7 @@
          <!-- instagram sasction done -->
          <div class="fulLatestDeal">
             <div class="dealTop">
-                <h1 class="cHading">Get The Latest Deals</h1>
+                <h1 class="cHading dilmir">Get The Latest Deals</h1>
                 <p class="cpara">$30 coupon for first shopping</p>
             </div>
             <div class="dealButoom">
