--- a/index.html
+++ b/index.html
@@ -114,12 +114,26 @@
          <!-- deal saction done -->
     </main>
     
-    <footer>
+    <footer class="extathing">
+        <div class="allfo">
+        <div class="footerLeft">
         <div class="footer">
             <h1 class="fohad">Flower<span class="fshop">Shop</span></h1>
-            <p class="fop">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <p class="fop">"We're not just a flower shop, we're a matchmaker! We've got the perfect flowers to help you start a budding romance. Our 'Budding Romance' package includes a bouquet of flowers, a box of chocolates, and a bottle of wine. We're so serious about romance, we even have our own punny name! So what are you waiting for? Come on down to Budding Romance and let us help you find love... or at least a good night's sleep! (We're not responsible for any spontaneous proposals that may occur.)"</p>
             <h6 class="foclose">@2020-2023, FlowerShop.com. All rights reserved. </h6>
         </div>
+    </div>
+        <div class="footerRight">
+            <h2 class="fohad"><span class="fshop">Let’s Mes</span>sage me</h2>
+            <form action="">
+                <input type="text" name="" id="" placeholder="Your Name" class="input">
+                <input type="email" name="" id="" placeholder="Your Email" class="input">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message" class="input"></textarea>
+                <input class="Allbutton" type="submit" value="Submit">
+
+            </form>
+        </div>
+    </div>
     </footer>
     
 </body>
